[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Lou Onezime"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24.1"
hyper-tls = "0.5"

bytes = "1"
url = "2.2"
http = "0.2.9"
regex = "1.10"
scraper = "0.17.1"
once_cell = "1.18.0"

tokio-test = "0.4.3"