[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Lou Onezime"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.3"

hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24.1"
hyper-tls = "0.5"
http = "0.2.9"

url = "2.2"
bytes = "1"

regex = "1.10"
scraper = "0.17.1"
once_cell = "1.18.0"

# for Formatting and Linting
rustfmt = "0.10"
clippy = "0.0.302"
